# cvmplusplus

./: .gitignore  CMakeLists.txt  CVM++_Architectural_Blueprint.md  README.md  instructions.md
graphify-out/: .graphify_analysis.json  graph.json  manifest.json
include/cvm/: ast.hpp  chunk.hpp  compiler.hpp  debug.hpp  error.hpp  lexer.hpp  parser.hpp  token.hpp  value.hpp  vm.hpp
scripts/: 02_arithmetic.cvm  03_variables.cvm  04_booleans.cvm  05_if_else.cvm  06_while_loop.cvm  07_input.cvm  08_fibonacci.cvm  09_strings.cvm
scripts/error-cases/: error_stack.cvm  error_test.cvm
src/: ast.cpp  compiler.cpp  debug.cpp  lexer.cpp  main.cpp  parser.cpp  vm.cpp
